[gd_scene load_steps=12 format=3 uid="uid://dup03vjpyl5w0"]

[ext_resource type="Script" uid="uid://6fti23coeixd" path="res://player/scripts/player_controller.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://bq3c5lmxgqy64" path="res://player/camera/scripts/camera_controller.gd" id="3_g1dw6"]
[ext_resource type="Resource" uid="uid://dh4fy2fmpcy3p" path="res://player/settings/player.tres" id="3_yw30f"]
[ext_resource type="PackedScene" uid="uid://txqxu2rsuniu" path="res://player/models/player_model.tscn" id="4_yw30f"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://cjxjlxx0xlo0s" path="res://player/animations/animation_tree.tres" id="5_g6k8r"]
[ext_resource type="Script" uid="uid://dc75fn7enqrxf" path="res://player/scripts/player_animator.gd" id="5_qjkh3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g6k8r"]
radius = 0.842935
height = 3.17944

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_g1dw6"]

[sub_resource type="ViewportTexture" id="ViewportTexture_g1dw6"]
viewport_path = NodePath("avatar/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g1dw6"]
bg_color = Color(0.214703, 0.214703, 0.214702, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yw30f"]
bg_color = Color(3.36915e-06, 0.68933, 0.66727, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="player" type="Node3D"]

[node name="camera" type="Camera3D" parent="."]
script = ExtResource("3_g1dw6")
camera_tracking_speed = 15.0

[node name="avatar" type="CharacterBody3D" parent="." node_paths=PackedStringArray("camera") groups=["Player"]]
collision_layer = 2
script = ExtResource("1_oul6g")
player_settings = ExtResource("3_yw30f")
camera = NodePath("../camera")

[node name="shape" type="CollisionShape3D" parent="avatar"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.0988091, 0.342933)
shape = SubResource("CapsuleShape3D_g6k8r")

[node name="model" type="Node3D" parent="avatar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.47428, 0)

[node name="player" parent="avatar/model" instance=ExtResource("4_yw30f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.589593, 1.27849)

[node name="Skeleton3D" parent="avatar/model/player/Armature" index="0"]
bones/1/rotation = Quaternion(0.319802, 0.698062, 0.632314, -0.103026)
bones/3/rotation = Quaternion(0.314766, 0.70231, 0.6308, -0.098863)
bones/5/rotation = Quaternion(0.323549, 0.693262, 0.635837, -0.102057)
bones/7/position = Vector3(0.143031, 0.507524, -0.433017)
bones/7/rotation = Quaternion(0.612355, 0.326391, 0.702745, -0.156973)
bones/9/position = Vector3(0.146784, 1.35669, -0.448023)
bones/9/rotation = Quaternion(0.64623, 0.344704, 0.641732, -0.227476)
bones/11/rotation = Quaternion(-0.319236, 0.698169, 0.632569, 0.102498)
bones/13/rotation = Quaternion(-0.31129, 0.702865, 0.632477, 0.0951419)
bones/15/rotation = Quaternion(-0.320139, 0.694476, 0.636731, 0.098935)
bones/17/position = Vector3(-0.143531, 0.507544, -0.432782)
bones/17/rotation = Quaternion(0.611757, -0.326562, -0.703235, -0.156754)
bones/19/position = Vector3(-0.147191, 1.35671, -0.447782)
bones/19/rotation = Quaternion(0.645681, -0.344936, -0.642245, -0.227239)

[node name="limb_a_l" parent="avatar/model/player/Armature/Skeleton3D" index="0"]
transform = Transform3D(1, -1.04308e-07, 2.98023e-08, 1.49012e-07, 1, 0, -4.47035e-08, -2.98023e-08, 1, -1.49012e-08, 2.38419e-07, 1.78814e-07)

[node name="limb_b_l" parent="avatar/model/player/Armature/Skeleton3D" index="1"]
transform = Transform3D(1, -6.33299e-08, -2.98023e-07, -1.2666e-07, 1, -4.47035e-08, 2.83122e-07, 4.47035e-08, 1, -1.3411e-07, 5.96046e-08, 1.19209e-07)

[node name="limb_c_l" parent="avatar/model/player/Armature/Skeleton3D" index="2"]
transform = Transform3D(1, -8.56817e-08, 0, -2.30968e-07, 1, 1.19209e-07, 0, -2.08616e-07, 1, 1.78814e-07, 1.19209e-07, 2.98023e-07)

[node name="wing_b_l" parent="avatar/model/player/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.901, 0.42651, -0.0792899, -0.427858, 0.903846, 4.47035e-08, 0.0716659, 0.0339246, 0.996851, -0.595601, 0.183793, -0.0559762)

[node name="wing_a_l" parent="avatar/model/player/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.798534, 0.267863, 0.539066, -0.17147, 0.959654, -0.22285, -0.57701, 0.0855196, 0.812247, -0.29035, 0.0836796, -0.0300005)

[node name="limb_a_r" parent="avatar/model/player/Armature/Skeleton3D" index="5"]
transform = Transform3D(1, 1.60187e-07, -1.19209e-07, -4.09782e-08, 1, 1.19209e-07, 1.04308e-07, -8.9407e-08, 1, -8.9407e-08, 4.17233e-07, 4.32134e-07)

[node name="limb_b_r" parent="avatar/model/player/Armature/Skeleton3D" index="6"]
transform = Transform3D(1, 1.04308e-07, 1.04308e-07, 3.7998e-07, 1, 4.47035e-08, -3.27826e-07, -5.96046e-08, 1, -1.63913e-07, 5.96046e-08, 3.57628e-07)

[node name="limb_c_r" parent="avatar/model/player/Armature/Skeleton3D" index="7"]
transform = Transform3D(1, 4.84288e-08, 0, 8.19564e-08, 1, 2.08616e-07, 5.96046e-08, -4.47035e-08, 1, 2.68221e-07, 3.57628e-07, -1.19209e-07)

[node name="wing_b_r" parent="avatar/model/player/Armature/Skeleton3D" index="8"]
transform = Transform3D(0.901, -0.426511, 0.0792901, 0.427858, 0.903846, 1.09896e-07, -0.0716661, 0.0339248, 0.996852, 0.595601, 0.183793, -0.0559764)

[node name="wing_a_r" parent="avatar/model/player/Armature/Skeleton3D" index="9"]
transform = Transform3D(0.798534, -0.267863, -0.539066, 0.17147, 0.959654, -0.22285, 0.577011, 0.0855197, 0.812247, 0.290351, 0.0836792, -0.03)

[node name="AnimationTree" type="AnimationTree" parent="avatar/model/player"]
tree_root = ExtResource("5_g6k8r")
anim_player = NodePath("../AnimationPlayer")
parameters/glide_blend/blend_amount = 0
parameters/walk_blend/blend_amount = false
script = ExtResource("5_qjkh3")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="avatar/model/player"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.785882, -0.935558)
remote_path = NodePath("../../../shape")

[node name="arm" type="SpringArm3D" parent="avatar"]
shape = SubResource("SeparationRayShape3D_g1dw6")
spring_length = 10.0

[node name="camera_anchor" type="Node3D" parent="avatar/arm"]

[node name="GlideBar3D" type="Sprite3D" parent="avatar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.32965, 0)
billboard = 2
texture = SubResource("ViewportTexture_g1dw6")

[node name="SubViewport" type="SubViewport" parent="avatar"]
transparent_bg = true

[node name="GlideBar" type="ProgressBar" parent="avatar/SubViewport"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -20.0
offset_right = 98.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_g1dw6")
theme_override_styles/fill = SubResource("StyleBoxFlat_yw30f")
max_value = 5.0
value = 5.0
show_percentage = false

[node name="GlideTimer" type="Timer" parent="avatar"]
one_shot = true

[connection signal="timeout" from="avatar/GlideTimer" to="avatar" method="_on_glide_timer_timeout"]

[editable path="avatar/model/player"]
